--- a/sextant/package.json
+++ b/sextant/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.5.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-websocket": "^2.1.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
